--- a/crunchyconfig.ini
+++ b/crunchyconfig.ini
@@ -1,16 +1,12 @@
 [crunchy-settings]
-# Defines livestreamer program path to be executed via subprocess, with windows use full path.
-# eq. of windows version
-pr = "C:\Program Files (x86)\Livestreamer\livestreamer.exe"
 
-#eq. of linux version
-# pr = "livestreamer"
+# Defines player. (REQUIRED)
+pl = "C:\Program Files\VideoLAN\VLC\vlc.exe"
+# Defines quality, in crunchyroll choices are low, mid and ultra. (REQUIRED)
+qa = ultra
 
-# Defines player. Use only with linux. On Windows, define default player to livestreamer config file.
-#pl = "-p mplayer"
+# Defines If chromecast is in use
+cc = 1
 
-# Defines quality, in crunchyroll choices are low, mid and ultra
-qa = "ultra"
-
-# Defines hls to be passed through to player, this enables forwarding and rewinding the stream within mediaplayer.
-ar = "--player-passthrough hls"
+# Defines chromecast ip
+cc_ip = 192.168.0.10
